hphp/test/zend/bad/Zend/tests/bug48667_1.php
<?php

abstract class A implements Iterator, IteratorAggregate { }

?>